tests/reference/asr-test_set1-11379c7.stderr
semantic error: Argument to set.add must be of same type as set's element type
 --> tests/errors/test_set1.py:6:5
  |
6 |     a.add('err')
  |     ^^^^^^^^^^^^ 
